--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "es2018",
       "dom"
     ],
+    "strictPropertyInitialization": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
